Use macro averaging for binary classification

--- a/docs/automl_gs_tutorial.ipynb
+++ b/docs/automl_gs_tutorial.ipynb
@@ -253,7 +253,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "8d741d5405fb44aaa9b22d61aefd21e0",
+       "model_id": "b827ef928fda451fb2fff89f6cc53ec6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -267,7 +267,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "15aa1b26a0c44f61ba5ae60afeeee7b2",
+       "model_id": "60bea55a06ea4c72ba0d922093833b6c",
        "version_major": 2,
        "version_minor": 0
       },
@@ -284,39 +284,87 @@
      "text": [
       "\n",
       "Metrics:\n",
-      "trial_id: ec32902c-7915-44ec-abfd-820d2c483e41\n",
+      "trial_id: 269b2f5a-5759-48eb-908a-91301498f173\n",
       "epoch: 20\n",
-      "time_completed: 2019-03-25 00:13:56\n",
-      "log_loss: 0.6927925439809592\n",
+      "time_completed: 2019-03-25 14:37:26\n",
+      "log_loss: 0.6891973887043499\n",
       "accuracy: 0.6142322097378277\n",
-      "auc: 0.5\n",
-      "precision: 0.6142322097378277\n",
-      "recall: 0.6142322097378277\n",
-      "f1: 0.6142322097378277\n",
+      "auc: 0.5012431920435709\n",
+      "precision: 0.30711610486891383\n",
+      "recall: 0.5\n",
+      "f1: 0.3805104408352668\n",
       "\n",
       "\n",
       "Metrics:\n",
-      "trial_id: a604947c-8d0c-4cf0-bfee-dd47470e8033\n",
+      "trial_id: 261256e8-1708-43d8-98de-f73ca3d5ad4f\n",
       "epoch: 20\n",
-      "time_completed: 2019-03-25 00:14:09\n",
-      "log_loss: 0.4649398927524518\n",
-      "accuracy: 0.7865168539325843\n",
-      "auc: 0.8289426947667535\n",
-      "precision: 0.7865168539325843\n",
-      "recall: 0.7865168539325843\n",
-      "f1: 0.7865168539325842\n",
+      "time_completed: 2019-03-25 14:37:37\n",
+      "log_loss: 0.6832971124166853\n",
+      "accuracy: 0.6404494382022472\n",
+      "auc: 0.7806950035519773\n",
+      "precision: 0.7603359173126615\n",
+      "recall: 0.5357861709685058\n",
+      "f1: 0.4576844955991876\n",
       "\n",
       "\n",
       "Metrics:\n",
-      "trial_id: 38a1d264-ec71-4204-bd58-7c1a3849aaf5\n",
+      "trial_id: 3a693105-3ff9-42be-802d-6a9147b6638b\n",
       "epoch: 20\n",
-      "time_completed: 2019-03-25 00:15:01\n",
-      "log_loss: 0.5828870279550524\n",
-      "accuracy: 0.8052434456928839\n",
-      "auc: 0.8241475254558371\n",
-      "precision: 0.8052434456928839\n",
-      "recall: 0.8052434456928839\n",
-      "f1: 0.8052434456928839\n"
+      "time_completed: 2019-03-25 14:38:14\n",
+      "log_loss: 0.5836427935611889\n",
+      "accuracy: 0.700374531835206\n",
+      "auc: 0.7412384560738811\n",
+      "precision: 0.6830808080808081\n",
+      "recall: 0.6802628463177836\n",
+      "f1: 0.6814982703089585\n",
+      "\n",
+      "\n",
+      "Metrics:\n",
+      "trial_id: f3f24805-79f0-4feb-bdff-1050d912df71\n",
+      "epoch: 20\n",
+      "time_completed: 2019-03-25 14:39:11\n",
+      "log_loss: 0.578730115506533\n",
+      "accuracy: 0.704119850187266\n",
+      "auc: 0.7311449206725077\n",
+      "precision: 0.6875487900078064\n",
+      "recall: 0.6706725076959508\n",
+      "f1: 0.6749372004499992\n",
+      "\n",
+      "\n",
+      "Metrics:\n",
+      "trial_id: 6c530a43-6413-47e9-8bc3-d96ae9782148\n",
+      "epoch: 20\n",
+      "time_completed: 2019-03-25 14:39:19\n",
+      "log_loss: 0.6386199218503544\n",
+      "accuracy: 0.7116104868913857\n",
+      "auc: 0.7266457494672033\n",
+      "precision: 0.7087053571428572\n",
+      "recall: 0.6605197726734549\n",
+      "f1: 0.6645564456917228\n",
+      "\n",
+      "\n",
+      "Metrics:\n",
+      "trial_id: 355ec086-3033-477c-be62-1817b01278a7\n",
+      "epoch: 20\n",
+      "time_completed: 2019-03-25 14:40:01\n",
+      "log_loss: nan\n",
+      "accuracy: 0.7640449438202247\n",
+      "auc: 0.7292209329860291\n",
+      "precision: 0.7659641506791766\n",
+      "recall: 0.7248697608335306\n",
+      "f1: 0.7337986041874377\n",
+      "\n",
+      "\n",
+      "Metrics:\n",
+      "trial_id: 998e2eca-9f44-4726-b08e-61e5e381f43d\n",
+      "epoch: 20\n",
+      "time_completed: 2019-03-25 14:41:07\n",
+      "log_loss: 0.4609095337434431\n",
+      "accuracy: 0.7940074906367042\n",
+      "auc: 0.8314882784750177\n",
+      "precision: 0.7872881355932204\n",
+      "recall: 0.7709270660667772\n",
+      "f1: 0.7768677920775531\n"
      ]
     }
    ],
@@ -328,7 +376,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "About 80.5% accuracy: not bad.\n",
+    "About 79.4% accuracy: not bad.\n",
     "\n",
     "The model files are saved in a time-stamped folder in the same directory, and `automl_results.csv` has the results from all the training."
    ]
@@ -368,7 +416,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "28f5ac019fdc43b198ca7b15b71db788",
+       "model_id": "3cd87fa88929461ebc858cf2f81fb762",
        "version_major": 2,
        "version_minor": 0
       },
@@ -382,7 +430,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "52fd4b484acd4463a16ef7257f579f8a",
+       "model_id": "e0b38cf3aade46519aaffb403021d33a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -399,51 +447,63 @@
      "text": [
       "\n",
       "Metrics:\n",
-      "trial_id: 97c0ebe9-d03b-43f9-befc-08bfaf0b2c14\n",
+      "trial_id: 0bf1bc3a-e215-4685-9c1e-2f924c4dda15\n",
       "epoch: 50\n",
-      "time_completed: 2019-03-25 00:25:03\n",
-      "log_loss: 0.6393894917063052\n",
+      "time_completed: 2019-03-25 14:47:29\n",
+      "log_loss: 0.6861143221569418\n",
       "accuracy: 0.6891385767790262\n",
-      "auc: 0.6897643855079327\n",
-      "precision: 0.6891385767790262\n",
-      "recall: 0.6891385767790262\n",
-      "f1: 0.6891385767790262\n",
+      "auc: 0.6915699739521668\n",
+      "precision: 0.6718104160925875\n",
+      "recall: 0.6476438550793275\n",
+      "f1: 0.6512550161303012\n",
       "\n",
       "\n",
       "Metrics:\n",
-      "trial_id: d77ce1bb-51b0-459a-807a-284a93c1fc66\n",
+      "trial_id: 6ad4efef-f02a-461e-a3f6-febb49b7eb39\n",
       "epoch: 50\n",
-      "time_completed: 2019-03-25 00:25:04\n",
-      "log_loss: 0.5660474079378536\n",
+      "time_completed: 2019-03-25 14:47:31\n",
+      "log_loss: 0.5730137539546142\n",
+      "accuracy: 0.7303370786516854\n",
+      "auc: 0.7495560028415817\n",
+      "precision: 0.7193349263241736\n",
+      "recall: 0.6956251479990527\n",
+      "f1: 0.7014906832298138\n",
+      "\n",
+      "\n",
+      "Metrics:\n",
+      "trial_id: 758c4a9e-ce70-4a1c-95f9-bf936da4b55a\n",
+      "epoch: 50\n",
+      "time_completed: 2019-03-25 14:47:32\n",
+      "log_loss: 0.5655809819475095\n",
       "accuracy: 0.7940074906367042\n",
-      "auc: 0.8357506511958324\n",
-      "precision: 0.7940074906367042\n",
-      "recall: 0.7940074906367042\n",
-      "f1: 0.7940074906367042\n",
+      "auc: 0.8300378877575183\n",
+      "precision: 0.8316425120772947\n",
+      "recall: 0.7438432394032678\n",
+      "f1: 0.7571643543399533\n",
       "\n",
       "\n",
       "Metrics:\n",
-      "trial_id: d50fd10e-93b0-4f32-a8f8-cf4e4869ec01\n",
+      "trial_id: 5e83896a-001d-4372-bf4a-5e4c77addea7\n",
       "epoch: 50\n",
-      "time_completed: 2019-03-25 00:25:09\n",
-      "log_loss: 0.62283251035526\n",
-      "accuracy: 0.797752808988764\n",
-      "auc: 0.8229931328439498\n",
-      "precision: 0.797752808988764\n",
-      "recall: 0.797752808988764\n",
-      "f1: 0.797752808988764\n",
+      "time_completed: 2019-03-25 14:47:34\n",
+      "log_loss: 0.44416837770952267\n",
+      "accuracy: 0.8202247191011236\n",
+      "auc: 0.8358690504380772\n",
+      "precision: 0.8283059520603285\n",
+      "recall: 0.7886573525929435\n",
+      "f1: 0.7999500499500499\n",
       "\n",
       "\n",
       "Metrics:\n",
-      "trial_id: a66fefdd-f0b2-4370-b5d1-9db585bb5f71\n",
+      "trial_id: f6fef923-6598-4266-852c-e0cbd2269158\n",
       "epoch: 50\n",
-      "time_completed: 2019-03-25 00:25:14\n",
-      "log_loss: 0.4226235784171672\n",
-      "accuracy: 0.8389513108614233\n",
-      "auc: 0.853658536585366\n",
-      "precision: 0.8389513108614233\n",
-      "recall: 0.8389513108614233\n",
-      "f1: 0.8389513108614233\n"
+      "time_completed: 2019-03-25 14:48:12\n",
+      "log_loss: 0.4294823957851317\n",
+      "accuracy: 0.8352059925093633\n",
+      "auc: 0.8462881837556239\n",
+      "precision: 0.8433890880127439\n",
+      "recall: 0.8062692398768648\n",
+      "f1: 0.8175776397515528\n"
      ]
     }
    ],
@@ -455,7 +515,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Meanwhile, xgboost got 83.9% accuracy on the same dataset in about 1/4th the time, even after massively increasing the number of epochs.\n",
+    "Meanwhile, xgboost got 83.5% accuracy on the same dataset in about 1/4th the time, even after massively increasing the number of epochs.\n",
     "\n",
     "Although automl-gs automates a lot of the option selection, it's encourages to still try multiple options."
    ]
